--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.18.6"
   },
   "dependencies": {
-    "iconv-lite": "^0.4.24"
+    "iconv-lite": "^0.4.24",
+    "xml2js": "^0.4.19"
   }
 }
